[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ObstacleSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/MenuLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/textures/background.png" type="Texture" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="MenuLayer" parent="." instance=ExtResource( 5 )]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="ObstacleSpawner" parent="." instance=ExtResource( 2 )]
position = Vector2( 800, 0 )

[node name="Ground" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 685.73 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 115, 427 )
gravity_scale = 0.0

[connection signal="start_game" from="MenuLayer" to="." method="_on_MenuLayer_start_game"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]

[editable path="Ground"]
